kubernetes/apps/auth/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    ns: auth
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
    ca-bundle: internal
