kubernetes/apps/auth/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: auth
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
